# midisplitter

./: MANIFEST.in  README.md  pyproject.toml
midisplitter/: MIDI.py  __init__.py  constants.py  midisplitter.py
midisplitter/artwork/: README.md
