[build-system]
requires = ["setuptools>=82.0.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "midisplitter"
version = "26.4.19"
description = "Stand-alone, pure Python MIDI splitter for splitting any MIDI into individual voices"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Alex Lev", email = "alexlev61@proton.me" }
]
maintainers = [
  { name = "Alex Lev", email = "alexlev61@proton.me" }
]

keywords = [
  "MIDI",
  "MIDI splitter",
  "MIDI voices",
  "MIDI voices splitter",
  "music",
  "music information retrieval",
  "MIR"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: MIDI",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: Console",
  "Natural Language :: English",
  "Typing :: Typed"
]

requires-python = ">=3.8"

[project.readme]
file = "midisplitter/README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/asigalov61/midisplitter"
SoundCloud = "https://soundcloud.com/aleksandr-sigalov-61/"
Documentation = "https://github.com/asigalov61/midisplitter"
Issues = "https://github.com/asigalov61/midisplitter/issues"
Discussions = "https://github.com/asigalov61/midisplitter/discussions"
Dataset = "https://huggingface.co/datasets/projectlosangeles/Discover-MIDI-Dataset"